--- a/ui/mainwindow.ui
+++ b/ui/mainwindow.ui
@@ -6,9 +6,15 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>382</width>
-    <height>384</height>
+    <width>290</width>
+    <height>377</height>
    </rect>
+  </property>
+  <property name="minimumSize">
+   <size>
+    <width>290</width>
+    <height>377</height>
+   </size>
   </property>
   <property name="windowTitle">
    <string>RiskSpec Loops Analyzer</string>
@@ -17,8 +23,8 @@
    <enum>Qt::LeftToRight</enum>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <layout class="QFormLayout" name="formLayout">
-    <item row="0" column="0" colspan="2">
+   <layout class="QHBoxLayout" name="horizontalLayout" stretch="0">
+    <item>
      <widget class="QTreeView" name="treeView">
       <property name="sizePolicy">
        <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
@@ -44,7 +50,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>382</width>
+     <width>290</width>
      <height>19</height>
     </rect>
    </property>
